# ichack26

./: .pre-commit-config.yaml  Makefile  README.md  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  GETTING_STARTED.md  INTEGRATION_GUIDE.md  README.md  compute_rusle.py  main.py  pyproject.toml  requirements.txt  simple_app.py  start.sh
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  models.py  routes.py  service.py
backend/app/users/: models.py  routes.py  service.py
backend/crop_predict/model/: features.txt  label_encoder.joblib
backend/data/: GROA literature.csv  sites.csv
backend/processing_scripts/: 02_train_model.py  03_create_map.py
backend/tests/: test_api.py
crop_predict/: predict.py  quantile.py
frontend/: .env.example  Dockerfile  README.md  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  start.sh  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: draw-button.tsx  draw-polygon-button.tsx  intro-alert.tsx  resium-polygon-draw.tsx  (+3 more)
groa-mapping/: GETTING_STARTED.md  pyproject.toml  test_imports.py
groa-mapping/data/: biomass_litter_CWD.csv  soil.csv
groa-mapping/outputs/: cv_results.csv  global_carbon_map_report.html  global_map_predictions.csv  groa_model.pkl  training_data_basic.csv
groa-mapping/processing_scripts/: 01_prepare_training_data.py  03_create_map.py  04_visualize_map.py  05_reproduce_figure_1.R  05_reproduce_figure_1.py  06_predict_point.py
infra/: README.md  docker-compose.yml
middleware/: .gitignore  main.py  requirements.txt  schemas.py  start.sh  validators.py
middleware/services/: __init__.py  backend_client.py  coordinate_parser.py  sentinel_client.py
middleware/tests/: conftest.py  testmain.py  testvalidators.py
(+4 files in other folders)
