[project]
name = "groa-mapping"
version = "0.1.0"
description = "Mapping carbon accumulation potential from global natural forest regrowth"
authors = [
    {name = "Ata",email = "ata@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "tqdm (>=4.67.2,<5.0.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "global-land-mask (>=1.0.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
